--- a/WebClient/WebClient.csproj
+++ b/WebClient/WebClient.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Views\ServiceCluster.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
@@ -22,7 +26,17 @@
     <Reference Include="QlikServiceClusterManager.Model">
       <HintPath>..\..\..\..\Projects\qsu-qlik-service-cluster\src\QlikServiceClusterManager.Model\bin\Debug\netcoreapp1.1\QlikServiceClusterManager.Model.dll</HintPath>
       <Private>true</Private>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="NewFolder\QlikServiceClusterManager.Model\QlikServiceClusterManager.Model.csproj" />
   </ItemGroup>
 
 </Project>
